--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Industrious by TEMPLATED</title>
+		<title>Encuentra tu Bus</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">Encuentra tu Bus</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -27,17 +27,16 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<li><a href="scrum.html">SCRUM</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<h1>Encuentra tu Bus</h1>
+					<p>Una aplicación para dispositivos móviles que ofrecerá<br />
+						un servicio de geolocalización de los autobuses en tu ciudad</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
@@ -46,8 +45,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Otras aplicaciones te muestran una estimación del tiempo</h2>
+						<p><strong>Encuentra tu Bus</strong> muestra un mapa a tiempo real con la localización y capacidad de cada bus en todo momento. <br /> Permitiendo así potenciar la toma de decisiones de los usuarios a la hora de elegir una parada u otra para coger el autobús lo antes posible.</p>
 					</header>
 					<div class="highlights">
 						<section>
