--- a/elements.html
+++ b/elements.html
@@ -476,20 +476,21 @@
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>Accumsan montes viverra</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+							<h3>Encuentra tu bus</h3>
+							<p>Encuentra tu bus cumple Ley Orgánica 3/2018. Al entrar en esta página se acepta que la empresa podrá utilizar tus cookies con fines publicitarios. Encuentra tu bus, también, se reserva el derecho a tomar medidas legales a cualquier usuario o entidad que intente atentar contra la integridad de este sito web o intente utilizar los datos que se muestran en esta para fines ilegales. </p> 						
 						</section>
 						<section>
-							<h4>Sem turpis amet semper</h4>
+							<h4>Equipo desarrollador</h4>
 							<ul class="alt">
-								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
-								<li><a href="#">Etiam vel lorem sed amet.</a></li>
-								<li><a href="#">Felis enim feugiat viverra.</a></li>
-								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
+								<li><a href="https://github.com/migueg">Miguel García .</a></li>
+								<li><a href="https://github.com/manuelpcastro">Manuel Pancorbo.</a></li>
+								<li><a href="https://github.com/Josalmer">Jose Saldaña.</a></li>
+								<li><a href="https://github.com/DomingoLopez">Domingo López</a></li>
+								<li><a href="https://github.com/GonzaloMartinezIanez">Gonzalo Martínez</a></li>
 							</ul>
 						</section>
 						<section>
-							<h4>Magna sed ipsum</h4>
+							<h4>Redes sociales</h4>
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
