--- a/index.html
+++ b/index.html
@@ -119,46 +119,48 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Testimonios</h2>
+						<p>Los siguientes testimonios reflejan las opiniones de varios usuarios de Ecuentra tu bus</p>
 					</header>
 					<div class="testimonials">
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Estoy muy satisefecha ya que al abrir la app se visualiza un mapa de Granada en el que aparecen bastantes autobuses moviéndose por la ciudad.
+										</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/image.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Maria Luisa</strong> </p>
 								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Encuentra tu bus es ideal para poder saber a qué parada acudir y cuándo coger el bus. La uso a diario y es imprescindible para mí</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Pepe Gómez</strong> </p>
 								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Sencilla, clara y eficaz. Esta app era necesaria!!.Además, 
+										puedo consultar una cifra real y exacta de la ocupación del autobús</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Andrea Martínez</strong> </p>
 								</div>
 							</div>
 						</section>
@@ -166,38 +168,40 @@
 				</div>
 			</section>
 
+		
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="content">
-						<section>
-							<h3>Accumsan montes viverra</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
-						</section>
-						<section>
-							<h4>Sem turpis amet semper</h4>
-							<ul class="alt">
-								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
-								<li><a href="#">Etiam vel lorem sed amet.</a></li>
-								<li><a href="#">Felis enim feugiat viverra.</a></li>
-								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
-							</ul>
-						</section>
-						<section>
-							<h4>Magna sed ipsum</h4>
-							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
-					</div>
+		<footer id="footer">
+			<div class="inner">
+				<div class="content">
+					<section>
+						<h3>Encuentra tu bus</h3>
+						<p>Encuentra tu bus cumple Ley Orgánica 3/2018. Al entrar en esta página se acepta que la empresa podrá utilizar tus cookies con fines publicitarios. Encuentra tu bus, también, se reserva el derecho a tomar medidas legales a cualquier usuario o entidad que intente atentar contra la integridad de este sito web o intente utilizar los datos que se muestran en esta para fines ilegales. </p> 						
+					</section>
+					<section>
+						<h4>Equipo desarrollador</h4>
+						<ul class="alt">
+							<li><a href="https://github.com/migueg">Miguel García .</a></li>
+							<li><a href="https://github.com/manuelpcastro">Manuel Pancorbo.</a></li>
+							<li><a href="https://github.com/Josalmer">Jose Saldaña.</a></li>
+							<li><a href="https://github.com/DomingoLopez">Domingo López</a></li>
+							<li><a href="https://github.com/GonzaloMartinezIanez">Gonzalo Martínez</a></li>
+						</ul>
+					</section>
+					<section>
+						<h4>Redes sociales</h4>
+						<ul class="plain">
+							<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+							<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+							<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+							<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+						</ul>
+					</section>
 				</div>
-			</footer>
+				<div class="copyright">
+					&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+				</div>
+			</div>
+		</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
