--- a/index.html
+++ b/index.html
@@ -38,69 +38,69 @@
 					<p>Una aplicación para dispositivos móviles que ofrecerá<br />
 						un servicio de geolocalización de los autobuses en tu ciudad</p>
 				</div>
-				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
+				<video autoplay loop muted playsinline src="images/IntroMDA.mp4"></video>
 			</section>
 
-		<!-- Highlights -->
+		<!-- App -->
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
 						<h2>Otras aplicaciones te muestran una estimación del tiempo</h2>
-						<p><strong>Encuentra tu Bus</strong> muestra un mapa a tiempo real con la localización y capacidad de cada bus en todo momento. <br /> Permitiendo así potenciar la toma de decisiones de los usuarios a la hora de elegir una parada u otra para coger el autobús lo antes posible.</p>
+						<p><strong>Encuentra tu Bus</strong> muestra un mapa a tiempo real con la <strong>localización y capacidad de cada bus</strong> en todo momento. <br /> Permitiendo así potenciar la toma de decisiones de los usuarios a la hora de elegir una parada u otra para coger el autobús lo antes posible.</p>
 					</header>
 					<div class="highlights">
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Feugiat consequat</h3>
+									<img class="card-app-image" src="images/app/Login.PNG"></img>
+									<h3>Landing Page</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Página de bienvenida de la aplicación móvil.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<img class="card-app-image" src="images/app/Inicio.PNG"></img>
+									<h3>Página principal</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Página principal de la aplicación móvil, muestra un mapa donde se pueden ver los autobuses, sus rutas y las paradas.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<img class="card-app-image" src="images/app/Menu_inicio.PNG"></img>
+									<h3>Menú de navegación</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Desde el menú de navegación se puede navegar a las distintas secciones de la aplicación.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
+									<img class="card-app-image" src="images/app/Lineas2.PNG"></img>
+									<h3>Listado de líneas</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Se pueden ver las distintas líneas, si se hace click en una de ellas se entra a la vista de detalle de la misma.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
+									<img class="card-app-image" src="images/app/Opciones_ruta.PNG"></img>
+									<h3>Opciones de ruta</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Al introducir un destino, la aplicación te recomienda las rutas que puedes seguir.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
+									<img class="card-app-image" src="images/app/Detalle_ruta.PNG"></img>
+									<h3>Detalle de ruta</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Al seleccionar una ruta aparece desglosada, indicando si hay que hacer tramos a pie o transbordos.</p>
 							</div>
 						</section>
 					</div>
@@ -110,10 +110,49 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<h2>Evita las multitudes</h2>
+					<p>Con <strong>Encuentra tu Bus</strong> puedes ver la ocupación de cada autobus en tiempo real, así puedes elegir coger un autobus menos lleno</p>
 				</div>
 			</section>
+
+		<!-- Admin -->
+		<section class="wrapper">
+			<div class="inner">
+				<header class="special">
+					<h2>Panel de administración</h2>
+					<p>Cuenta con un panel de administración para configurar  </p>
+				</header>
+				<div class="highlights">
+					<section>
+						<div class="content">
+							<header>
+								<img class="card-admin-image" src="images/admin/login.PNG"></img>
+								<h3>Login administrador</h3>
+							</header>
+							<p>Es necesario autenticarse para acceder al panel de administración.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img class="card-admin-image" src="images/admin/main.PNG"></img>
+								<h3>Página principal</h3>
+							</header>
+							<p>Elige que quieres consultar o gestionar, autobuses, paradas o líneas.</p>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img class="card-admin-image" src="images/admin/autobus.PNG"></img>
+								<h3>Página principal</h3>
+							</header>
+							<p>Añade o modifica los autobuses, paradas o líneas facilmente con una interfaz sencilla.</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
 
 		<!-- Testimonials -->
 			<section class="wrapper">
