Pagina Scrum casi terminada

--- a/scrum.html
+++ b/scrum.html
@@ -29,6 +29,10 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="scrum.html">SCRUM</a></li>
+					<ul class="sub-links">
+						<li><a href="#sprint1">Sprint 1</a></li>
+						<li><a href="#sprint2">Sprint 2</a></li>
+					</ul>
 				</ul>
 			</nav>
 
@@ -42,14 +46,223 @@
 				<div class="inner">
 					<div class="content">
 						<header>
-							<h2>Feugiat consequat</h2>
+							<h2>Equipo Ágil</h2>
 						</header>
-						<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-						<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-						<hr />
-						<h3>Magna odio tempus commodo</h3>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-						<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
+						<p>Hemos realizado el proyecto llevando a cabo metodologías ágiles, en particular SCRUM. El equipo ha realizado reuniones diarias para cada Sprint, así como reuniones de retrospectiva y reuniones de revisión al terminar cada Sprint.</p>
+
+						<div class="testimonials">
+								<section>
+									<div class="content">
+										<div class="">
+											<div class="image">
+												<img class="img-equipo" src="images/fotos-equipo/jose.png" alt="" />
+											</div>
+											<p class="credit">- <strong>José Saldaña Mercado</strong> <span>Presentador</span></p>
+										</div>
+									</div>
+								</section>
+								<section>
+									<div class="content">
+										<div class="">
+											<div class="image">
+												<img class="img-equipo" src="images/fotos-equipo/migue.png" alt="" />
+											</div>
+											<p class="credit">- <strong>Miguel García Tenorio</strong> <span>Coordinador</span></p>
+										</div>
+									</div>
+								</section>
+								<section>
+									<div class="content">
+										<div class="">
+											<div class="image">
+												<img class="img-equipo" src="images/fotos-equipo/manu.png" alt="" />
+											</div>
+											<p class="credit">- <strong>Manuel Pancorbo Castro</strong> <span>Administrador Repositorios</span></p>
+										</div>
+									</div>
+								</section>
+								<section>
+									<div class="content">
+										<div class="">
+											<div class="image">
+												<img class="img-equipo" src="images/fotos-equipo/domingo.png" alt="" />
+											</div>
+											<p class="credit">- <strong>Domingo López Pacheco</strong> <span>Product Owner</span></p>
+										</div>
+									</div>
+								</section>
+								<section>
+									<div class="content">
+										<div class="">
+											<div class="image">
+												<img class="img-equipo" src="images/fotos-equipo/gonzalo.png" alt="" />
+											</div>
+											<p class="credit">- <strong>Gonzalo Martínez Iáñez</strong> <span>SCRUM Master.</span></p>
+										</div>
+									</div>
+								</section>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Highlights SPRINT 1-->
+			<section class="wrapper" id="sprint1">
+				<div class="inner">
+					<header class="special">
+						<h2>Sprint 1</h2>
+						<h4>Duración: 2 semanas</h4>
+						<p>Durante el primer Sprint se llevó a cabo el prototipado de los paneles de administración y de la aplicación móvil. Hemos documentado todo el proceso en tableros físicos, así como con la herramienta Trello</p>
+					</header>
+					<div class="highlights">
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/asignacion-sprint.jpg">
+									<h3>Asignación de tareas para el Sprint 1</h3>
+								</header>
+								<p>Asignación de tareas inicial</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/26-11.jpg">
+									<h3>Daily Meeting: 26/11/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/27-11.jpg">
+									<h3>Daily Meeting: 27/11/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/30-11.jpg">
+									<h3>Daily Meeting: 30/11/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/02-12.jpg">
+									<h3>Daily Meeting: 02/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/04-12.jpg">
+									<h3>Daily Meeting: 04/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/06-12.jpg">
+									<h3>Daily Meeting: 06/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint1/08-12.jpg">
+									<h3>Daily Meeting: 08/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+					</div>
+				</div>
+			</section>
+
+			<!-- Highlights SPRINT 1-->
+			<section class="wrapper" id="sprint1">
+				<div class="inner">
+					<header class="special">
+						<h2>Sprint 2</h2>
+						<h4>Duración: 2 semanas</h4>
+						<p>Durante el segundo Sprint se llevó a cabo la implementación inicial del panel de Administración, creación del HOME de la aplicación Móvil y creación de la Base de datos MySQL</p>
+					</header>
+					<div class="highlights">
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/9-12.jpg">
+									<h3>Asignación de tareas para el Sprint 2</h3>
+								</header>
+								<p>Asignación de tareas inicial</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/11-12.jpg">
+									<h3>Daily Meeting: 11/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/14-12.jpg">
+									<h3>Daily Meeting: 14/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/16-12.jpg">
+									<h3>Daily Meeting: 16/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/18-12.jpg">
+									<h3>Daily Meeting: 18/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/21-12.jpg">
+									<h3>Daily Meeting: 21/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<header>
+									<img class="img-tablero" src="images/sprint2/fin.jpg">
+									<h3>Daily Meeting: 22/12/2020</h3>
+								</header>
+								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
+							</div>
+						</section>
 					</div>
 				</div>
 			</section>
