Deleted social media

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/image.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</div>
 									<p class="credit">- <strong>Maria Luisa</strong> </p>
 								</div>
@@ -154,7 +154,7 @@
 							<div class="content">
 								<blockquote>
 									<p>Sencilla, clara y eficaz. Esta app era necesaria!!.Además, 
-										puedo consultar una cifra real y exacta de la ocupación del autobús</p>
+										puedo consultar una cifra real y exacta de la ocupación del autobús en tiempo real</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
@@ -177,6 +177,7 @@
 						<h3>Encuentra tu bus</h3>
 						<p>Encuentra tu bus cumple Ley Orgánica 3/2018. Al entrar en esta página se acepta que la empresa podrá utilizar tus cookies con fines publicitarios. Encuentra tu bus, también, se reserva el derecho a tomar medidas legales a cualquier usuario o entidad que intente atentar contra la integridad de este sito web o intente utilizar los datos que se muestran en esta para fines ilegales. </p> 						
 					</section>
+					<section></section>
 					<section>
 						<h4>Equipo desarrollador</h4>
 						<ul class="alt">
@@ -187,18 +188,6 @@
 							<li><a href="https://github.com/GonzaloMartinezIanez">Gonzalo Martínez</a></li>
 						</ul>
 					</section>
-					<section>
-						<h4>Redes sociales</h4>
-						<ul class="plain">
-							<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-							<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-							<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						</ul>
-					</section>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
 				</div>
 			</div>
 		</footer>
