--- a/scrum.html
+++ b/scrum.html
@@ -62,6 +62,7 @@
 						<h3>Encuentra tu bus</h3>
 						<p>Encuentra tu bus cumple Ley Orgánica 3/2018. Al entrar en esta página se acepta que la empresa podrá utilizar tus cookies con fines publicitarios. Encuentra tu bus, también, se reserva el derecho a tomar medidas legales a cualquier usuario o entidad que intente atentar contra la integridad de este sito web o intente utilizar los datos que se muestran en esta para fines ilegales. </p> 						
 					</section>
+					<section></section>
 					<section>
 						<h4>Equipo desarrollador</h4>
 						<ul class="alt">
@@ -72,18 +73,6 @@
 							<li><a href="https://github.com/GonzaloMartinezIanez">Gonzalo Martínez</a></li>
 						</ul>
 					</section>
-					<section>
-						<h4>Redes sociales</h4>
-						<ul class="plain">
-							<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-							<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-							<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						</ul>
-					</section>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
 				</div>
 			</div>
 		</footer>
