--- a/scrum.html
+++ b/scrum.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">SCRUM</a>
+				<img class="bus-logo-bar" src="images/busRojo.png"></img>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -25,6 +25,7 @@
 
 		<!-- Nav -->
 			<nav id="menu">
+				<img class="bus-logo-menu" src="images/busRojo.png"></img>
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="scrum.html">SCRUM</a></li>
