Fixed SCRUM view

--- a/index.html
+++ b/index.html
@@ -24,13 +24,21 @@
 			</header>
 
 		<!-- Nav -->
-			<nav id="menu">
-				<img class="bus-logo-menu" src="images/busRojo.png"></img>
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="scrum.html">SCRUM</a></li>
+		<nav id="menu">
+			<img class="bus-logo-menu" src="images/busRojo.png"></img>
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="scrum.html">SCRUM</a></li>
+				<ul class="sub-links">
+					<li><a href="scrum.html">Personas</a></li>
+					<li><a href="scrum.html">Escenarios</a></li>
+					<li><a href="scrum.html">Historias de usuario</a></li>
+					<li><a href="scrum.html">Plan de entregas</a></li>
+					<li><a href="scrum.html">Sprint 1</a></li>
+					<li><a href="scrum.html">Sprint 2</a></li>
 				</ul>
-			</nav>
+			</ul>
+		</nav>
 
 		<!-- Banner -->
 			<section id="banner">
