--- a/scrum.html
+++ b/scrum.html
@@ -30,6 +30,10 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="scrum.html">SCRUM</a></li>
 					<ul class="sub-links">
+						<li><a href="#personas">Personas</a></li>
+						<li><a href="#escenarios">Escenarios</a></li>
+						<li><a href="#historias">Historias de usuario</a></li>
+						<li><a href="#plan">Plan de entregas</a></li>
 						<li><a href="#sprint1">Sprint 1</a></li>
 						<li><a href="#sprint2">Sprint 2</a></li>
 					</ul>
@@ -57,7 +61,7 @@
 											<div class="image">
 												<img class="img-equipo" src="images/fotos-equipo/jose.png" alt="" />
 											</div>
-											<p class="credit">- <strong>José Saldaña Mercado</strong> <span>Presentador</span></p>
+											<p>- <strong>José Saldaña Mercado</strong> <br /> <span>Presentador</span></p>
 										</div>
 									</div>
 								</section>
@@ -67,7 +71,7 @@
 											<div class="image">
 												<img class="img-equipo" src="images/fotos-equipo/migue.png" alt="" />
 											</div>
-											<p class="credit">- <strong>Miguel García Tenorio</strong> <span>Coordinador</span></p>
+											<p>- <strong>Miguel García Tenorio</strong> <br /> <span>Coordinador</span></p>
 										</div>
 									</div>
 								</section>
@@ -77,7 +81,7 @@
 											<div class="image">
 												<img class="img-equipo" src="images/fotos-equipo/manu.png" alt="" />
 											</div>
-											<p class="credit">- <strong>Manuel Pancorbo Castro</strong> <span>Administrador Repositorios</span></p>
+											<p>- <strong>Manuel Pancorbo Castro</strong> <br /> <span>Administrador Repositorios</span></p>
 										</div>
 									</div>
 								</section>
@@ -87,17 +91,18 @@
 											<div class="image">
 												<img class="img-equipo" src="images/fotos-equipo/domingo.png" alt="" />
 											</div>
-											<p class="credit">- <strong>Domingo López Pacheco</strong> <span>Product Owner</span></p>
+											<p>- <strong>Domingo López Pacheco</strong> <br /> <span>Product Owner</span></p>
 										</div>
 									</div>
 								</section>
+								<section></section>
 								<section>
 									<div class="content">
 										<div class="">
 											<div class="image">
 												<img class="img-equipo" src="images/fotos-equipo/gonzalo.png" alt="" />
 											</div>
-											<p class="credit">- <strong>Gonzalo Martínez Iáñez</strong> <span>SCRUM Master.</span></p>
+											<p>- <strong>Gonzalo Martínez Iáñez</strong> <br /> <span>SCRUM Master.</span></p>
 										</div>
 									</div>
 								</section>
@@ -178,6 +183,7 @@
 								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
 							</div>
 						</section>
+						<section></section>
 						<section>
 							<div class="content">
 								<header>
@@ -192,7 +198,7 @@
 			</section>
 
 			<!-- Highlights SPRINT 1-->
-			<section class="wrapper" id="sprint1">
+			<section class="wrapper" id="sprint2">
 				<div class="inner">
 					<header class="special">
 						<h2>Sprint 2</h2>
@@ -254,6 +260,7 @@
 								<p>Se comentan las tareas que los miembros del equipo tenían asignadas. No hubo ninguna tarea que puediera ser considerada impedida</p>
 							</div>
 						</section>
+						<section></section>
 						<section>
 							<div class="content">
 								<header>
