Updated Scrum view

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 			<img class="bus-logo-menu" src="images/busRojo.png"></img>
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="scrum.html">SCRUM</a></li>
+				<li><a href="scrum.html">Desarrollo ágil</a></li>
 				<ul class="sub-links">
-					<li><a href="scrum.html">Personas</a></li>
-					<li><a href="scrum.html">Escenarios</a></li>
-					<li><a href="scrum.html">Historias de usuario</a></li>
-					<li><a href="scrum.html">Plan de entregas</a></li>
-					<li><a href="scrum.html">Sprint 1</a></li>
-					<li><a href="scrum.html">Sprint 2</a></li>
+					<li><a href="scrum.html#equipo">Equipo ágil</a></li>
+					<li><a href="scrum.html#personas">Personas</a></li>
+					<li><a href="scrum.html#escenarios">Escenarios</a></li>
+					<li><a href="scrum.html#cta">SCRUM</a></li>
+					<li><a href="scrum.html#historias">Historias de usuario</a></li>
+					<li><a href="scrum.html#plan">Plan de entregas</a></li>
+					<li><a href="scrum.html#sprint1">Sprint 1</a></li>
+					<li><a href="scrum.html#sprint2">Sprint 2</a></li>
 				</ul>
 			</ul>
 		</nav>
